# anyl-wallet

./: .gitignore  .travis.yml  BUILD-qemu.md  CMakeLists.txt  CONTRIBUTING.md  README.md  byte_converter.c  crypto_helper.c  main.c  prj.conf  prj_qemu_x86.conf  requirements.txt  rlp_encoder.c  transaction.c  transaction.h
.circleci/: Makefile  build_zephyr_nrf52840_pca10056.sh  config.yml  download_solc.sh  install_deps.sh  install_zephyr_env.sh  run_test.sh
.circleci/images/develop/: Dockerfile
.circleci/images/primary/: Dockerfile
.circleci/images/ubuntu_1804/: Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md
abi_compiler/: __main__.py  constants.py  test_data.py  utils.py
cmake/: boilerplate.cmake  nanopb.cmake  solc.cmake  trezor-crypto.cmake  wallet.cmake  zephyr.cmake
crypto/: CMakeLists.txt  keccak256.c  keccak256.h
documentation/: eclipse-ide.md
eth/: CMakeLists.txt  address.c  address.h  data.c  data.h  sign.c  sign.h  transaction.c  transaction.h  web3.c  web3.h  web3_jsonp.c  web3_jsonp.h
examples/sawtooth-fish-supply/: CMakeLists.txt  prj.conf  prj_qemu_x86.conf
examples/sawtooth-fish-supply/app/: demo_shell.c  main.c  sawtooth_shell.c
examples/sawtooth-fish-supply/payload/: CMakeLists.txt  fish_encoders.c  fish_encoders.h  payload.c  payload.h
examples/sawtooth-fish-supply/test/: CMakeLists.txt  fish_demo.cpp
examples/tests/: CMakeLists.txt
examples/tests/src/: CMakeLists.txt  TestContract.sol  test_crypto.cpp  test_data.cpp  test_web3.cpp
examples/wallet/: CMakeLists.txt
examples/wallet/app/: main.c
helpers/: CMakeLists.txt  byte_converter.c  byte_converter.h  compat.c  crypto_helper.c  crypto_helper.h  fp2str.c  fp2str.h  hextobin.c  hextobin.h  jsmn_utils.c  jsmn_utils.h  macros.h  math.c  math.h  rlp_encoder.c  rlp_encoder.h  stdint_compat.h  uint256.c  uint256.h
helpers/macos/: endian.h
helpers/zephyr/: endian.h
misc/: lighttpd.conf
pca10056/blank/ses/: nrf_crypto_ecdsa_pca10056.emProject  nrf_crypto_ecdsa_pca10056.emSession
sawtooth/: CMakeLists.txt  dummy.c  encoders.c  encoders.h  error_parser.c  error_parser.h  st_transaction.c  st_transaction.h
scripts/: setup.sh
tests/: CMakeLists.txt  TestContract.sol  compat.c  test_address.cpp  test_byte_converter  test_crypto.cpp  test_helpers.cpp  test_rlp.cpp  test_sawtooth.cpp  test_transaction.cpp  test_tx.cpp  test_tx_Vishav.cpp  test_tx_new  test_uint256.cpp  test_web3.cpp  unsigned_tx.py
tools/: etherscan_query.py  pk_gen.py
wallet/: wallet.c
zephyr/: compat.c  compat.h  config.h  erc20_shell.c  http_service.c  http_utils.c  http_utils.h  lwm2m_client.c  lwm2m_client.h  main.c  sensor_service.c  sensor_service.h  upload.c  upload.h  utils.c  utils.h  wallet.c  wallet.h  web3_json.c  web3_json.h  web3_rpc.c  web3_rpc.h  web3_shell.c  web3_shell.h
zephyr-wallet/: CMakeLists.txt  compat.c  compat.h  config.h  endian.h  erc20_shell.c  erc20_shell.h  http_service.c  http_service.h  http_utils.c  http_utils.h  lwm2m_client.c  lwm2m_client.h  main.c  sensor_service.c  sensor_service.h  shell_modules.c  shell_modules.h  sntp_shell.c  sntp_shell.h  upload.c  upload.h  utils.c  utils.h  wallet.c  wallet.h  web3_rpc.c  web3_shell.c  web3_shell.h
zephyr-wallet/contracts/: Token.sol
